specs/020-map-set-tuples/examples/invalid/tuple-element-type.ts
let p: [int, string] = [1, 2];
console.log(p[0]);
